# trading-recommendations

./: .deployment_marker.json  .dockerignore  .gitignore  .pylintrc  CLOUD_BACKUP_SUCCESS.md  CONFIDENCE_ALERT_REPORT.md  DATABASE_FIX_REPORT.md  DEPLOY_STEPS.md  Dockerfile  FINAL_SAVE_REPORT.md  INVITE_CODES_FIXED.md  KEYERROR_FIXED_FINAL.md  PYLANCE_COMPLETE_GUIDE.md  PYLANCE_SOLUTIONS.md  QUICKSTART.md  README.md  RENDER_DEPLOY.md  STATUS_FINAL.md  SUBSCRIPTION_README.md  SUMMARY.md  TESTING.md  THEMES_GUIDE.md  add_latest_report.bat  add_report.py  app.py  app.yaml  app_enhanced.py  app_enhanced_backup.py  app_enhanced_fixed.py  app_streamlit.py  clean_pylance.sh  control_panel.py  deploy_alternative.sh  deploy_setup.bat  digitalocean-app.yaml  docker-compose.yml  emergency_fix.py  enhancements.py  fix_database.py  fix_invite_codes_database.py  (+24 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
deploy/: AWS_DEPLOYMENT.md  AZURE_DEPLOYMENT.md  DIGITALOCEAN_DEPLOYMENT.md  GCP_DEPLOYMENT.md  HEROKU_DEPLOYMENT.md
my bot/: CHANGELOG.md  DEPLOYMENT_GUIDE.md  Procfile  QUICK_DEPLOY.md  README.md  USER_GUIDE.md  app.py  app_enhanced.py  deploy_setup.sh  railway.toml  requirements.txt  requirements_cloud.txt  run.bat  sample_report.txt  setup_and_run.bat  setup_and_run.sh  trading_recommendations_backup_20251007_005207.db
