[tool.pylance]
extraPaths = [
    "/home/vscode/.local/lib/python3.11/site-packages",
    "/usr/local/lib/python3.11/site-packages"
]

[tool.python]
interpreterPath = "/usr/local/bin/python3"

[tool.pyright]
include = ["*.py"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"

reportMissingImports = false
reportMissingModuleSource = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false

[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "trading-recommendations"
version = "1.0.0"
description = "نظام التوصيات المالية المتقدم"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0"
]